--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -69,7 +69,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -91,7 +91,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -113,7 +113,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -135,7 +135,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -157,7 +157,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -179,7 +179,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -201,7 +201,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
@@ -223,7 +223,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-last"></i>
+                        <i class="fas fa-star"></i>
                         <span class="rating-point">5.00</span>
                     </div>
                     <p class="delivery-info">Worldwide shifting <br> available <br>
